--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,13 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../node_modules/font-awesome/css/font-awesome.css';
+
+#map {
+  height: 400px;
+  /* The height is 400 pixels */
+  width: 100%;
+  /* The width is the width of the web page */
+}
+
+.logo_p{
+  font-size: 30px;
+}
